--- a/ParadigmaOOP1_0087/ParadigmaOOP1_0087.vcxproj
+++ b/ParadigmaOOP1_0087/ParadigmaOOP1_0087.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Agregasi.cpp" />
     <ClCompile Include="ParadigmaOOP1_0087.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
