--- a/ParadigmaOOP1_0087/ParadigmaOOP1_0087.vcxproj
+++ b/ParadigmaOOP1_0087/ParadigmaOOP1_0087.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Agregasi.cpp" />
+    <ClCompile Include="Ibu.cpp" />
     <ClCompile Include="ParadigmaOOP1_0087.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
