--- a/ParadigmaOOP1_0087/ParadigmaOOP1_0087.vcxproj
+++ b/ParadigmaOOP1_0087/ParadigmaOOP1_0087.vcxproj
@@ -127,9 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Agregasi.cpp" />
-    <ClCompile Include="Ibu.cpp" />
     <ClCompile Include="ParadigmaOOP1_0087.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="anak.h" />
+    <ClInclude Include="ibu.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
