--- a/composision/composision.vcxproj
+++ b/composision/composision.vcxproj
@@ -129,6 +129,10 @@
   <ItemGroup>
     <ClCompile Include="composision.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Jantung.h" />
+    <ClInclude Include="Manusia.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
