--- a/composision/composision.vcxproj.filters
+++ b/composision/composision.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Manusia.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MineM.cpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
